--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coderhouse JS Clase 1</title>
+    <title>Coderhouse Consignas</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-indigo-500 p-8">
-    <script src="./app.js"></script>
+    <main class="flex flex-col justify-center items-center">
+      <h1 class="text-3xl font-bold underline mb-5">CoderHouse Consignas</h1>
+      <ul class="text-2xl">
+        <li><a href="./clase1/index.html">Clase 1</a></li>
+      </ul>
+    </main>
   </body>
 </html>
