--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="bg-indigo-500 p-8">
     <main class="flex flex-col justify-center items-center">
-      <h1 class="text-3xl font-bold underline mb-5">CoderHouse Consignas</h1>
+      <h1 class="text-3xl font-bold underline mb-5">Coderhouse Consignas</h1>
       <ul class="text-2xl">
         <li><a href="./clase1/index.html">Clase 1</a></li>
       </ul>
