--- a/clases/clase1/index.html
+++ b/clases/clase1/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coderhouse JS Clase 1</title>
+    <title>Coderhouse JavaScript Clase 1</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-indigo-500 p-8">
+  <body class="bg-green-400 p-8">
     <script src="./app.js"></script>
   </body>
 </html>
