--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coderhouse Consignas</title>
+    <title>Coderhouse JavaScript</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-indigo-500 p-8">
-    <main class="flex flex-col justify-center items-center">
-      <h1 class="text-3xl font-bold underline mb-5">Coderhouse Consignas</h1>
+    <main class="grid place-content-center text-center">
+      <h1 class="text-4xl font-bold underline mb-8">Coderhouse JavaScript</h1>
       <ul class="text-2xl">
-        <li><a href="./clase1/index.html">Clase 1</a></li>
+        <li>
+          <a href="./clase1/index.html" class="hover:underline">👉 Clase 1 - Conceptos generales: sintaxis y variables</a>
+        </li>
+        <li>
+          <a href="./clase2/index.html" class="hover:underline">👉 Clase 2 - Control de flujos</a>
+        </li>
       </ul>
     </main>
   </body>
