--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <h1 class="text-4xl font-bold underline mb-8">Coderhouse JavaScript</h1>
       <ul class="text-2xl">
         <li>
-          <a href="./clase1/index.html" class="hover:underline">👉 Clase 1 - Conceptos generales: sintaxis y variables</a>
+          <a href="./clases/clase1/index.html" class="hover:underline">👉 Clase 1 - Conceptos generales: sintaxis y variables</a>
         </li>
 
         <li>
-          <a href="./clase2/index.html" class="hover:underline">👉 Clase 2 - Control de flujos</a>
+          <a href="./clases/clase2/index.html" class="hover:underline">👉 Clase 2 - Control de flujos</a>
         </li>
       </ul>
     </main>
