--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <li>
           <a href="./clases/clase1/index.html" class="hover:underline">👉 Clase 1 - Conceptos generales: sintaxis y variables</a>
         </li>
-
         <li>
           <a href="./clases/clase2/index.html" class="hover:underline">👉 Clase 2 - Control de flujos</a>
+        </li>
+        <li>
+          <a href="./clases/clase3/index.html" class="hover:underline">👉 Clase 3 - Ciclos / Iteraciones (Desafio complementario) </a>
         </li>
       </ul>
     </main>
