--- a/clases/clase3/index.html
+++ b/clases/clase3/index.html
@@ -7,7 +7,7 @@
     <title>Coderhouse JavaScript Clase 3</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-pink-400 p-8">
+  <body class="bg-gray-400 p-8">
     <script src="./app.js"></script>
   </body>
 </html>
