--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
       <h1 class="text-4xl font-bold underline mb-8">Coderhouse JavaScript</h1>
       <ul class="text-2xl">
         <li>
-          <a href="./clases/clase1/index.html" class="hover:underline">👉 Clase 1 - Conceptos generales: sintaxis y variables</a>
+          <a href="./clases/clase1/index.html" class="hover:underline">👉 <strong>Clase 1</strong> - Conceptos generales: sintaxis y variables</a>
         </li>
         <li>
-          <a href="./clases/clase2/index.html" class="hover:underline">👉 Clase 2 - Control de flujos</a>
+          <a href="./clases/clase2/index.html" class="hover:underline">👉 <strong>Clase 2</strong> - Control de flujos</a>
         </li>
         <li>
-          <a href="./clases/clase3/index.html" class="hover:underline">👉 Clase 3 - Ciclos / Iteraciones (Desafio complementario) </a>
+          <a href="./clases/clase3/index.html" class="hover:underline">👉 <strong>Clase 3</strong> - Ciclos / Iteraciones (Desafio complementario) </a>
+        </li>
+        <li>
+          <a href="./clases/clase4/index.html" class="hover:underline">👉 <strong>Clase 4</strong> - Programación con funciones (Desafio) </a>
         </li>
       </ul>
     </main>
