--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li>
           <a href="./clases/clase4/index.html" class="hover:underline">👉 <strong>Clase 4</strong> - Programación con funciones (Desafio) </a>
         </li>
+        <li>
+          <a href="./clases/clase5/index.html" class="hover:underline">👉 <strong>Clase 4</strong> - Objetos </a>
+        </li>
       </ul>
     </main>
   </body>
