--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <li>
           <a href="./clases/clase5/index.html" class="hover:underline">👉 <strong>Clase 5</strong> - Objetos </a>
         </li>
+        <li>
+          <a href="./clases/clase6/index.html" class="hover:underline">👉 <strong>Clase 6</strong> - Arrays </a>
+        </li>
       </ul>
     </main>
   </body>
