--- a/clases/clase5/index.html
+++ b/clases/clase5/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coderhouse JavaScript Clase 5</title>
+    <title>Coderhouse JavaScript Clase 5 Objetos</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-indigo-400 p-8">
