--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <h1 class="text-4xl font-bold underline mb-8">Coderhouse JavaScript</h1>
       <ul class="text-2xl">
         <li>
+          <a href="./proyecto/index.html" class="hover:underline">💪 <strong>Proyecto</strong></a>
+        </li>
+        <li>
           <a href="./clases/clase1/index.html" class="hover:underline">👉 <strong>Clase 1</strong> - Conceptos generales: sintaxis y variables</a>
         </li>
         <li>
