--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -162,7 +162,7 @@
         </div>
       </section>
 
-      <aside class="bg-primary p-2">
+      <aside class="bg-primary p-2 hide">
         <div class="cart-main">
           <div class="cart-close text-right mb-2">
             <a href="#"><strong>CLOSE</strong> </a>
@@ -223,6 +223,7 @@
     </main>
     <footer class="text-center">Development Mariano Arias 💪 2022</footer>
     <canvas id="cnv"></canvas>
+    <script src="./js/app.js"></script>
     <script src="./js/bg-stars.js"></script>
   </body>
 </html>
