--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <div class="menu">
-        <a href="#" class="text-white"><strong>MENU</strong></a>
+        <a href="#" class="text-white"><strong>FILTERS</strong></a>
       </div>
       <div class="text-center">
         <h1 class="logo">Buy Planets and Stars</h1>
