--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -41,181 +41,31 @@
     </header>
     <main>
       <section class="container">
-        <div class="cards-container w-100 mb-2">
-          <article class="card">
-            <img src="./assets/earth.png" alt="Earth" width="400" height="400" loading="lazy" class="mb-1" />
-            <div class="content">
-              <p class="mb-1">
-                <span class="card-title">Earth</span>
-                The largest and densest of the inner planets, the only one known to have current geological activity
-              </p>
-              <div class="content-price">
-                <span class="text-primary">$1400</span>
-                <button class="btn-article text-primary">ADD CART</button>
-              </div>
-            </div>
-          </article>
-          <article class="card">
-            <img src="./assets/mercury.png" alt="Mercury" width="400" height="400" loading="lazy" class="mb-1" />
-            <div class="content">
-              <p class="mb-1">
-                <span class="card-title">Mercury</span>
-                The largest and densest of the inner planets, the only one known to have current geological activity
-              </p>
-              <div class="content-price">
-                <span class="text-primary">$1400</span>
-                <button class="btn-article text-primary">ADD CART</button>
-              </div>
-            </div>
-          </article>
-          <article class="card">
-            <img src="./assets/venus.png" width="400" height="400" alt="Venus" loading="lazy" class="mb-1" />
-            <div class="content">
-              <p class="mb-1">
-                <span class="card-title">Venus</span>
-                The largest and densest of the inner planets, the only one known to have current geological activity
-              </p>
-              <div class="content-price">
-                <span class="text-primary">$1400</span>
-                <button class="btn-article text-primary">ADD CART</button>
-              </div>
-            </div>
-          </article>
-          <article class="card">
-            <img src="./assets/mars.png" width="400" height="400" alt="Mars" loading="lazy" class="mb-1" />
-            <div class="content">
-              <p class="mb-1">
-                <span class="card-title">Mars</span>
-                The largest and densest of the inner planets, the only one known to have current geological activity
-              </p>
-              <div class="content-price">
-                <span class="text-primary">$1400</span>
-                <button class="btn-article text-primary">ADD CART</button>
-              </div>
-            </div>
-          </article>
-          <article class="card">
-            <img src="./assets/jupiter.png" width="400" height="400" alt="Jupiter" loading="lazy" class="mb-1" />
-            <div class="content">
-              <p class="mb-1">
-                <span class="card-title">Jupiter</span>
-                The largest and densest of the inner planets, the only one known to have current geological activity
-              </p>
-              <div class="content-price">
-                <span class="text-primary">$1400</span>
-                <button class="btn-article text-primary">ADD CART</button>
-              </div>
-            </div>
-          </article>
-          <article class="card">
-            <img src="./assets/jupiter.png" width="400" height="400" alt="Saturn" loading="lazy" class="mb-1" />
-            <div class="content">
-              <p class="mb-1">
-                <span class="card-title">Saturn</span>
-                The largest and densest of the inner planets, the only one known to have current geological activity
-              </p>
-              <div class="content-price">
-                <span class="text-primary">$1400</span>
-                <button class="btn-article text-primary">ADD CART</button>
-              </div>
-            </div>
-          </article>
-          <article class="card">
-            <img src="./assets/uranus.png" width="400" height="400" alt="Uranus" loading="lazy" class="mb-1" />
-            <div class="content">
-              <p class="mb-1">
-                <span class="card-title">Uranus</span>
-                The largest and densest of the inner planets, the only one known to have current geological activity
-              </p>
-              <div class="content-price">
-                <span class="text-primary">$1400</span>
-                <button class="btn-article text-primary">ADD CART</button>
-              </div>
-            </div>
-          </article>
-          <article class="card">
-            <img src="./assets/neptuno.png" width="400" height="400" alt="Neptuno" loading="lazy" class="mb-1" />
-            <div class="content">
-              <p class="mb-1">
-                <span class="card-title">Neptune</span>
-                The largest and densest of the inner planets, the only one known to have current geological activity
-              </p>
-              <div class="content-price">
-                <span class="text-primary">$1400</span>
-                <button class="btn-article text-primary">ADD CART</button>
-              </div>
-            </div>
-          </article>
-          <article class="card">
-            <img src="./assets/moon.png" width="400" height="400" alt="Moon" loading="lazy" class="mb-1" />
-            <div class="content">
-              <p class="mb-1">
-                <span class="card-title">Moon</span>
-                The largest and densest of the inner planets, the only one known to have current geological activity
-              </p>
-              <div class="content-price">
-                <span class="text-primary">$1400</span>
-                <button class="btn-article text-primary">ADD CART</button>
-              </div>
-            </div>
-          </article>
-        </div>
+        <div class="cards-container w-100 mb-2"></div>
       </section>
 
-      <aside class="bg-primary p-2 hide">
-        <div class="cart-main">
+      <aside class="bg-primary p-2">
+        <div class="cart-list">
           <div class="cart-close text-right mb-2">
             <a href="#"><strong>CLOSE</strong> </a>
-          </div>
-          <div class="cart-item">
-            <div class="cart-img">
-              <img src="./assets/jupiter.png" alt="" />
-            </div>
-            <div class="cart-title">
-              <small>Mercurio<br />$1400</small>
-            </div>
-            <div class="cart-delete text-right">
-              <a href="#"> <i class="fa-solid fa-xmark"></i></a>
-            </div>
-          </div>
-          <div class="cart-item">
-            <div class="cart-img">
-              <img src="./assets/jupiter.png" alt="" />
-            </div>
-            <div class="cart-title">
-              <small>Planet Earth<br />$1400</small>
-            </div>
-            <div class="cart-delete text-right">
-              <a href="#"> <i class="fa-solid fa-xmark"></i></a>
-            </div>
-          </div>
-          <div class="cart-item">
-            <div class="cart-img">
-              <img src="./assets/jupiter.png" alt="" />
-            </div>
-            <div class="cart-title">
-              <small>Planet Earth<br />$1400</small>
-            </div>
-            <div class="cart-delete text-right">
-              <a href="#"> <i class="fa-solid fa-xmark"></i></a>
-            </div>
           </div>
         </div>
         <div class="cart-footer">
           <div class="cart-subtotal">
-            <div>Total:</div>
-            <div class="text-right">$1240</div>
+            <div>Subtotal:</div>
+            <div class="text-right" id="precio-subtotal">$0</div>
           </div>
           <div class="cart-subtotal">
             <div>Shiping:</div>
-            <div class="text-right">$400</div>
+            <div class="text-right" id="precio-shiping">$0<br /></div>
+          </div>
+          <div class="cart-subtotal">
+            <div>Taxes:</div>
+            <div class="text-right" id="precio-iva">$0</div>
           </div>
           <div class="cart-total">
             <div>Final:</div>
-            <div class="text-right">
-              $13000 <br />
-              <small>12 cuotas de $1200</small>
-            </div>
+            <div class="text-right" id="precio-final">$0</div>
           </div>
           <button class="btn-end">END SHOP</button>
         </div>
