--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -28,9 +28,7 @@
           <ul>
             <li><a href="#" class="text-white">Terrestrials</a></li>
             <li><a href="#" class="text-white">Gas Giants</a></li>
-            <li><a href="#" class="text-white">Outer Planets</a></li>
-            <li><a href="#" class="text-white">Inner Planets</a></li>
-            <li><a href="#" class="text-white">Stars</a></li>
+            <li><a href="#" class="text-white">With Moons</a></li>
           </ul>
         </nav>
       </div>
