--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -66,7 +66,8 @@
                 <img src="" alt="" />
               </div>
               <div class="cart-title"></div>
-              <div class="cart-amount"></div>
+              <div class="cart-amount text-center"></div>
+              <div class="cart-add"><button class="btn-add">+</button> <button class="btn-add">-</button></div>
               <div class="cart-delete text-right">
                 <button class="btn-delete"><i class="fa-solid fa-xmark"></i></button>
               </div>
@@ -87,14 +88,19 @@
             <div class="text-right" id="precio-iva">$0</div>
           </div>
           <div class="cart-total">
-            <div>Final:</div>
+            <div>Total:</div>
             <div class="text-right" id="precio-final">$0</div>
           </div>
           <button class="btn-end">END SHOP</button>
         </div>
       </aside>
     </main>
-    <footer class="text-center">Development Mariano Arias 💪 2022</footer>
+    <footer class="text-center">
+      <small>
+        Development Mariano Arias for CoderHouse 2022 💪 <br />
+        Teacher: Omar Maniás Tutor: Julio Caro Cota
+      </small>
+    </footer>
     <canvas id="cnv"></canvas>
     <script src="./js/app.js"></script>
     <script src="./js/bg-stars.js"></script>
