--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -44,10 +44,10 @@
               <img src="" alt="" width="400" height="400" loading="lazy" />
               <div class="content">
                 <div class="card-title text-primary"></div>
-                <div class="card-description"></div>
+                <div class="card-description text-gray"></div>
                 <div class="content-price">
-                  <div class="text-gray card-price"></div>
-                  <button class="btn-article text-primary"><i class="fa-solid fa-heart"></i> BUY</button>
+                  <div class="text-primary card-price"></div>
+                  <button class="btn-article text-primary"><i class="fa-solid fa-heart"></i> ADD</button>
                 </div>
               </div>
             </article>
@@ -91,18 +91,20 @@
             <div>Total:</div>
             <div class="text-right" id="precio-final">$0</div>
           </div>
-          <button class="btn-end">END SHOP</button>
+          <button class="btn-end mb-0">END SHOP</button>
+          <button class="btn-end btn-continue">CONTINUE SHOPPING</button>
         </div>
       </aside>
     </main>
     <footer class="text-center">
-      <small>
+      <p>
         Development Mariano Arias for CoderHouse 2022 💪 <br />
-        Teacher: Omar Maniás Tutor: Julio Caro Cota
-      </small>
+        Teacher: Omar Maniás 🚀 Tutor: Julio Caro Cota
+      </p>
     </footer>
     <canvas id="cnv"></canvas>
-    <script src="./js/app.js"></script>
+    <script src="./js/products.js"></script>
+    <script src="./js/cart.js"></script>
     <script src="./js/bg-stars.js"></script>
   </body>
 </html>
