--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -44,10 +44,10 @@
               <img src="" alt="" width="400" height="400" loading="lazy" />
               <div class="content">
                 <div class="card-title text-primary"></div>
-                <div class="card-description text-gray"></div>
-                <div class="content-price">
-                  <div class="text-primary card-price"></div>
-                  <button class="btn-article text-primary"><i class="fa-solid fa-heart"></i> ADD</button>
+                <div class="card-description"></div>
+                <div class="content-price text-gray">
+                  <div class="card-price"></div>
+                  <button class="btn-article text-primary"><i class="fa-solid fa-heart"></i> BUY</button>
                 </div>
               </div>
             </article>
