--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -23,9 +23,10 @@
         <a href="#" class="text-white"><strong>FILTERS</strong></a>
       </div>
       <div class="header-logo text-center">
-        <h1 class="logo">Buy Planets and Stars</h1>
+        <h1 class="logo">Tickets to the sky 🚀</h1>
         <nav class="hide">
           <ul>
+            <li><a href="#" class="text-white">All</a></li>
             <li><a href="#" class="text-white">Terrestrials</a></li>
             <li><a href="#" class="text-white">Gas Giants</a></li>
             <li><a href="#" class="text-white">With Moons</a></li>
@@ -47,7 +48,7 @@
                 <div class="card-description"></div>
                 <div class="content-price text-gray">
                   <div class="card-price"></div>
-                  <button class="btn-article text-primary"><i class="fa-solid fa-heart"></i> BUY</button>
+                  <button class="btn-article text-primary"><i class="fa-solid fa-ticket"></i> BUY</button>
                 </div>
               </div>
             </article>
@@ -91,7 +92,7 @@
             <div>Total:</div>
             <div class="text-right" id="precio-final">$0</div>
           </div>
-          <button class="btn-end mb-0">END SHOP</button>
+          <button class="btn-end mb-0">LIFT OFF</button>
           <button class="btn-end btn-continue">CONTINUE SHOPPING</button>
         </div>
       </aside>
@@ -99,7 +100,7 @@
     <footer class="text-center">
       <p>
         Development Mariano Arias for CoderHouse 2022 💪 <br />
-        Teacher: Omar Maniás 🚀 Tutor: Julio Caro Cota
+        Teacher: Omar Maniás 🚀 Tutor: Julio Caro
       </p>
     </footer>
     <canvas id="cnv"></canvas>
