--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -48,7 +48,7 @@
                 <div class="card-description"></div>
                 <div class="content-price text-gray">
                   <div class="card-price"></div>
-                  <button class="btn-article text-primary"><i class="fa-solid fa-ticket"></i> BUY</button>
+                  <button class="btn-article text-primary"><i class="fa-solid fa-heart"></i> BUY</button>
                 </div>
               </div>
             </article>
