--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buy Planets and Stars</title>
+    <title>Tickets to the sky 🚀</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -100,7 +100,7 @@
     <footer class="text-center">
       <p>
         Development Mariano Arias for CoderHouse 2022 💪 <br />
-        Teacher: Omar Maniás 🚀 Tutor: Julio Caro
+        Teacher: Omar Maniás 🧑‍💻 Tutor: Julio Caro
       </p>
     </footer>
     <canvas id="cnv"></canvas>
