--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -20,16 +20,16 @@
   <body>
     <header>
       <div class="menu">
-        <a href="#" class="text-white"><strong>FILTERS</strong></a>
+        <button class="btn-close text-white text-primary-hover">FILTERS</button>
       </div>
       <div class="header-logo text-center">
         <h1 class="logo">Tickets to the sky 🚀</h1>
         <nav class="hide">
           <ul>
-            <li><a href="#" class="text-white">All</a></li>
-            <li><a href="#" class="text-white">Terrestrials</a></li>
-            <li><a href="#" class="text-white">Gas Giants</a></li>
-            <li><a href="#" class="text-white">With Moons</a></li>
+            <li><a href="#" class="text-white addFilter text-primary" data-id="1">All</a></li>
+            <li><a href="#" class="text-white addFilter" data-id="2">Terrestrials</a></li>
+            <li><a href="#" class="text-white addFilter" data-id="3">Gas Giants</a></li>
+            <li><a href="#" class="text-white addFilter" data-id="4">With Moons</a></li>
           </ul>
         </nav>
       </div>
