--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -26,10 +26,12 @@
         <h1 class="logo">Tickets to the sky 🚀</h1>
         <nav class="hide">
           <ul>
-            <li><a href="#" class="text-white addFilter text-primary" data-id="1">All</a></li>
-            <li><a href="#" class="text-white addFilter" data-id="2">Terrestrials</a></li>
-            <li><a href="#" class="text-white addFilter" data-id="3">Gas Giants</a></li>
-            <li><a href="#" class="text-white addFilter" data-id="4">With Moons</a></li>
+            <li><a href="#" class="text-white addFilter text-primary">All</a></li>
+            <li><a href="#" class="text-white addFilter">Terrestrials</a></li>
+            <li><a href="#" class="text-white addFilter">Gas Giants</a></li>
+            <li><a href="#" class="text-white addFilter">With Moons</a></li>
+            <li><a href="#" class="text-white addFilter">Smalls</a></li>
+            <li><a href="#" class="text-white addFilter">Bigs</a></li>
           </ul>
         </nav>
       </div>
