--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -46,11 +46,11 @@
             <article>
               <img src="" alt="" width="400" height="400" loading="lazy" />
               <div class="content">
-                <div class="card-title text-primary"></div>
-                <div class="card-description"></div>
+                <div class="card-title text-primary strong mb-0"></div>
+                <div class="card-description mb-0"></div>
                 <div class="content-price text-gray">
-                  <div class="card-price"></div>
-                  <button class="btn-article text-primary"><i class="fa-solid fa-heart"></i> BUY</button>
+                  <div class="card-price strong"></div>
+                  <button class="btn-article text-primary strong"><i class="fa-solid fa-heart"></i> BUY</button>
                 </div>
               </div>
             </article>
