--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -96,7 +96,7 @@
             <div>Total:</div>
             <div class="text-right" id="precio-final">$0</div>
           </div>
-          <button class="btn-end mb-0">LIFT OFF</button>
+          <a href="end-shop.html" class="btn-end mb-0 text-center">LIFT OFF 👋</a>
           <button class="btn-end btn-continue">CONTINUE SHOPPING</button>
         </div>
       </aside>
@@ -104,7 +104,7 @@
     <footer class="text-center">
       <p>
         Development Mariano Arias for CoderHouse 2022 💪 <br />
-        Teacher: Omar Maniás 🧑‍💻 Tutor: Julio Caro
+        Teacher: Omar Maniás 💯 Tutor: Julio Caro
       </p>
     </footer>
     <canvas id="cnv"></canvas>
