--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -25,7 +25,7 @@
         <button class="btn-close text-white text-primary-hover">FILTERS</button>
       </div>
       <div class="header-logo text-center">
-        <h1 class="logo">Tickets to the sky 🚀</h1>
+        <h1 class="logo">Travel to the sky 🚀</h1>
         <nav class="hide">
           <ul>
             <li><a href="#" class="text-white addFilter text-primary">All</a></li>
@@ -52,7 +52,7 @@
                 <div class="card-description mb-0"></div>
                 <div class="content-price text-gray">
                   <div class="card-price strong"></div>
-                  <button class="btn-article text-primary strong"><i class="fa-solid fa-heart"></i> BUY</button>
+                  <button class="btn-article text-primary strong"><i class="fa-solid fa-heart"></i> ADD</button>
                 </div>
               </div>
             </article>
@@ -96,8 +96,8 @@
             <div>Total:</div>
             <div class="text-right" id="precio-final">$0</div>
           </div>
-          <a href="end-shop.html" class="btn-end mb-0 text-center">LIFT OFF 👋</a>
-          <button class="btn-end btn-continue">CONTINUE SHOPPING</button>
+          <a href="end-shop.html" class="btn-end mb-0 text-center shadow">CHEKOUT</a>
+          <button class="btn-end btn-continue shadow">CONTINUE SHOPPING</button>
         </div>
       </aside>
     </main>
