--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tickets to the sky 🚀</title>
+    <title>Travel to space 🚀</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -25,7 +25,8 @@
         <button class="btn-close text-white text-primary-hover">FILTERS</button>
       </div>
       <div class="header-logo text-center">
-        <h1 class="logo">Travel to the sky 🚀</h1>
+        <img src="./assets/NASA.webp" width="180" alt="Logo NASA" class="nasa-logo mb-1" />
+        <h1 class="logo">Travel to space 🚀</h1>
         <nav class="hide">
           <ul>
             <li><a href="#" class="text-white addFilter text-primary">All</a></li>
