--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -38,7 +38,7 @@
           </ul>
         </nav>
       </div>
-      <div class="cart cart-open">
+      <div class="cart cart-open text-right">
         <button class="btn-close text-white text-primary-hover">CART</button>
       </div>
     </header>
