--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -25,7 +25,7 @@
         <button class="btn-close text-white text-primary-hover">FILTERS</button>
       </div>
       <div class="header-logo text-center">
-        <img src="./assets/NASA.webp" width="180" alt="Logo NASA" class="nasa-logo mb-1" />
+        <img src="./assets/NASA.webp" width="150" alt="Logo NASA" class="nasa-logo mb-1" />
         <h1 class="logo">Travel to space 🚀</h1>
         <nav class="hide">
           <ul>
@@ -81,7 +81,7 @@
           </template>
         </div>
         <div class="cart-footer hide">
-          <a href="end-shop.html" class="btn-end mb-0 text-center shadow">CHEKOUT</a>
+          <a href="end-shop.html" class="btn-end mb-0 text-center shadow">CHECKOUT</a>
           <button class="btn-end btn-continue shadow">CONTINUE SHOPPING</button>
         </div>
       </aside>
