--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -25,7 +25,7 @@
         <button class="btn-close text-white text-primary-hover">FILTERS</button>
       </div>
       <div class="header-logo text-center">
-        <img src="./assets/NASA.webp" width="170" alt="Logo NASA" class="nasa-logo mb-1" />
+        <img src="./assets/nasa.png" width="130" alt="Logo NASA" class="nasa-logo" />
         <h1 class="logo">Travel to space 🚀</h1>
         <nav class="hide">
           <ul>
