--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -93,10 +93,9 @@
       </p>
     </footer>
     <canvas id="cnv"></canvas>
-    <script src="./js/products.js"></script>
+    <script src="./js/planets.js"></script>
     <script src="./js/cart.js"></script>
     <script src="./js/bg-stars.js"></script>
-
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </body>
 </html>
