--- a/proyecto/end-shop.html
+++ b/proyecto/end-shop.html
@@ -43,6 +43,12 @@
             <input type="email" name="email" id="email" placeholder="hi@domain.com" required class="mb-1 w-100" />
             <label for="address">Address</label>
             <input type="text" name="address" placeholder="502 I St NE Miami, Oklahoma(OK)" id="address" required class="mb-1 w-100" />
+
+            <label for="card">Credit Card Number</label>
+            <input type="text" name="card" placeholder="1111 1111 1111 1111" id="card" required class="mb-1 w-100" />
+            <label for="card">Expire</label>
+            <input type="text" name="expire" placeholder="MM/YY" id="expire" required class="mb-1 w-100" />
+
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad eum distinctio quaerat, soluta voluptas pariatur omnis odit aliquam perspiciatis asperiores dicta illum quasi.</p>
           </form>
         </section>
@@ -100,8 +106,14 @@
       </div>
     </div>
 
-    <script src="./js/end-shop.js"></script>
     <script src="./js/bg-stars.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.6.0/cleave.min.js"
+      integrity="sha512-KaIyHb30iXTXfGyI9cyKFUIRSSuekJt6/vqXtyQKhQP6ozZEGY8nOtRS6fExqE4+RbYHus2yGyYg1BrqxzV6YA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="./js/end-shop.js"></script>
   </body>
 </html>
