--- a/proyecto/end-shop.html
+++ b/proyecto/end-shop.html
@@ -45,7 +45,7 @@
             <input type="text" name="address" placeholder="502 I St NE Miami, Oklahoma(OK)" id="address" required class="mb-1 w-100" />
 
             <label for="card">Credit Card Number</label>
-            <input type="text" name="card" placeholder="1111 1111 1111 1111" id="card" required class="mb-1 w-100" />
+            <input type="text" name="card" placeholder="XXXX XXXX XXXX XXXX" id="card" required class="mb-1 w-100" />
             <label for="card">Expire</label>
             <input type="text" name="expire" placeholder="MM/YY" id="expire" required class="mb-1 w-100" />
 
