--- a/proyecto/end-shop.html
+++ b/proyecto/end-shop.html
@@ -106,7 +106,7 @@
       </div>
     </div>
 
-    <script src="./js/bg-stars.js"></script>
+    <script src="./assets/bg-stars.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.6.0/cleave.min.js"
