--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -102,7 +102,7 @@
     <canvas id="cnv"></canvas>
     <script src="./js/planets.js"></script>
     <script src="./js/cart.js"></script>
-    <script src="./js/bg-stars.js"></script>
+    <script src="./assets/bg-stars.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </body>
 </html>
