--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -80,7 +80,7 @@
               </div>
               <div class="cart-title"></div>
               <div class="cart-amount text-center"></div>
-              <div class="cart-add"><button class="btn-add">+</button> <button class="btn-add">-</button></div>
+              <div class="cart-add"><button class="btn-add btn-hover">+</button> <button class="btn-add btn-hover">-</button></div>
               <div class="cart-delete text-right">
                 <button class="btn-delete"><i class="fa-solid fa-xmark"></i></button>
               </div>
