--- a/proyecto/end-shop.html
+++ b/proyecto/end-shop.html
@@ -49,7 +49,7 @@
             <label for="card">Expire</label>
             <input type="text" name="expire" placeholder="MM/YY" id="expire" required class="mb-1 w-100" />
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad eum distinctio quaerat, soluta voluptas pariatur omnis odit aliquam perspiciatis asperiores dicta illum quasi.</p>
+            <small>All personal information collected is done so exclusively with your consent, by means of a form posted on our website, an email received from you or by telephone. No information is collected automatically.</small>
           </form>
         </section>
 
